--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
     <link rel="icon" href="image/icon image.webp">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>  
+    
+    <nav class="stiky">
+        <ul class="stiky-2">
+            <li class="navitem"><a href="#home">Home</a></li>
+            <li class="navitem"><a href="#Introduction">Introduction</a></li>
+            <li class="navitem"><a href="#Midia">Midia</a></li>
+            <li class="navitem"><a href="#Donation">Donation</a></li>
+            <li class="navitem"><a href="#Contact Us">Contact</a></li>
+        </ul>
+    </nav>
     <header>
-        <h1>Madrasa Darul Uloom Faizain-E-Tajushsharia</h1>
-        <nav>
-            <ul >
-                <li class="navitem"><a href="#Introduction">Introduction</a></li>
-                <li class="navitem"><a href="#Midia">Midia</a></li>
-                <li class="navitem"><a href="#Donation">Donation</a></li>
-                <li class="navitem"><a href="#Contact Us">Contact</a></li>
-            </ul>
-        </nav>
+        <section id="home"></section>
+        <h1>Madrasa Darul Uloom Faizain-E-Tajushsharia <q>Sikariyan</q></h1> 
     </header>
 
     <main>
 
-       <section id="Introduction" class="Introduction">
+        
+
+        <section id="Introduction" class="Introduction">
 
         <h2>Introduction</h2>
 
@@ -108,30 +113,7 @@
 
         <section id="Donation" class="donation">
 
-            <h2>Donation</h2>
-        <!-- <ul class="uldonation">
-            <li>
-                <b>Islamic Teachings ka Ittiba:</b>
-            </li>
-            <br>
-            <ol>
-                <li>
-                    <b>Hamara Maqsad</b>
-
-                   <blockquote><q> "Hamara maqsad hai ke hum zaruratmand logon ko madad pohchayein, jisse unke zindagi mein behtari aayegi. Aapki har donation kisi na kisi ki zindagi badalne mein ek ahm kirdar ada karti hai."</q></blockquote>
-                </li>
-                <br>
-                <li>
-                    <b>Islamic Teachings ka Ittiba</b>
-
-                   <blockquote><q> "Allah ke raaste mein dena (Sadaqah aur Zakat) sirf aapke maal ko paak nahi karta balki aapki zindagi mein barakat bhi lata hai. Hum yeh yaqeen dilate hain ke aapki donations shariyat ke mutabiq sab se zaruratmand logon tak pohnchi jati hai."</q></blockquote>
-                </li>
-                <li>
-                    "Aapki donation sirf ek click ki doori par hai 
-                </li>
-            </ol> 
-        </ul>    -->
-        <!-- madrsa ka kaam ka donation hai -->
+        <h2>Donation</h2>
 
         <ul class="uldonation">
 
@@ -139,7 +121,7 @@
                 <b>Madrasa Ka Kaam Mukammal Karne Mein Aapki Madad Ki Zarurat</b>
             </li>
             <br>
-            <ol>
+            <ol class="oldonation">
                 <li>
                     <b>Assalamu Alaikum</b>
 
@@ -173,7 +155,7 @@
 
             <li><b>Madrasa Ke Bachon Ke Liye Ek Mehfooz Aashiyana</b></li>
             <br>
-            <ol>
+            <ol class="oldonation">
                 <li><b>Assalamu Alaikum</b>
 
                     <blockquote><q>Hamare madrasa mein taleem haasil karne walay masoom bache ek mehfooz aur pur sukoon aashiyana ke mohtaaj hain. Ye bache apni poori zindagi deen ke ilm ko hasil karne aur usko phailane mein guzarenge, magar aaj wo ek chhat ke intezar mein hain.
@@ -244,7 +226,7 @@
     </main>
 
     <footer>
-        <p>&copy; <em>2022 Madrasa Darul Uloom Faizain-E-Tajushsharia</em> </p>
+        <p>&copy; <em>Copyright <b>2022 Madrasa Darul Uloom Faizain-E-Tajushsharia Sikariyan.</b> All Rights Reserved</em> </p>
     </footer>
 
 </body>
