--- a/donation.html
+++ b/donation.html
@@ -7,6 +7,6 @@
     <link rel="icon" href="image/icon image.webp">
 </head>
 <body>
-    <p style=" font-size: 500%;">comming soon</p> 
+    <p style=" font-size: 500%;">comming soon........!</p> 
 </body>
 </html>
