--- a/donation.html
+++ b/donation.html
@@ -5,8 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Madrasa Donation Payment</title>
     <link rel="icon" href="image/icon image.webp">
+    <link rel="stylesheet" href="donation.css">
+
 </head>
 <body>
-    <p style=" font-size: 500%;">comming soon........!</p> 
+    <header>
+        <div id="button"><button><a href="index.html" target="_blank" >Home page</a></button></div>
+     </header>
+     <h1>Madrasa Darul Uloom Faizain-E-Tajushsharia <q>Sikariyan</q></h1> 
+
+    <div class="container">
+
+        <header>
+            <h5>Please use the following options to make your payment or donation.</h5>
+        </header>
+        <br>
+
+        <section class="payment-section">
+            <div class="qr-code">
+                <img src="image/qr code.png" alt="QR Code for Payment">
+                <p>Scan this QR code to pay using your preferred mobile payment app.</p>
+            </div>
+
+
+            <div class="phonepe-payment">
+                <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="phonepe-button">
+                    Pay via PhonePe
+                </a>
+            </div>
+
+
+            <div class="bank-details">
+                <h2>Bank Details</h2>
+                <p><strong>Bank Name:</strong> ABC Bank</p>
+                <p><strong>Account Holder Name:</strong> Madrasa XYZ</p>
+                <p><strong>Account Number:</strong> 123456789</p>
+                <p><strong>IFSC Code:</strong> ABCD0123456</p>
+                <p><strong>Branch Name:</strong> XYZ Branch</p>
+            </div>
+        </section>
+
+        <section class="instructions">
+            <h2>Payment Instructions</h2>
+            <p>After making the payment, please confirm your payment by sending a screenshot or details to <a href="tel://6204606943">+916204606943</a></p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2022 Madrasa Darul Uloom Faizain-E-Tajushsharia Sikariyan. All Rights Reserved</p>
+    </footer>
+
 </body>
 </html>
