--- a/donation.html
+++ b/donation.html
@@ -17,7 +17,7 @@
     <div class="container">
 
         <header>
-            <h5>Please use the following options to make your payment or donation.</h5>
+            <h3>Please use the following options to make your payment or donation.</h3>
         </header>
         <br>
 
@@ -27,7 +27,12 @@
                 <p>Scan this QR code to pay using your preferred mobile payment app.</p>
             </div>
 
-
+            <div class="google-payment">
+                <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="google-button">
+                    Pay via Google pe
+                </a>
+            </div>
+            
             <div class="phonepe-payment">
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="phonepe-button">
                     Pay via PhonePe
