--- a/donation.html
+++ b/donation.html
@@ -22,12 +22,16 @@
         <br>
 
         <section class="payment-section">
-            <div class="qr-code">
-                <img src="image/qr code.png" alt="QR Code for Payment">
+            <!-- <div class="qr-code">
+                <img src="image/GooglePay_QR.png" alt="QR Code for Payment">
                 <p>Scan this QR code to pay using your preferred mobile payment app.</p>
-            </div>
+            </div> -->
+            <img style="width: 250px;" src="image/GooglePay_QR.png" alt="">
+            <br>
+            <br>
+            <br>
 
-            <div class="google-payment">
+            <!-- <div class="google-payment">
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="google-button">
                     Pay via Google pe
                 </a>
@@ -37,22 +41,22 @@
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="phonepe-button">
                     Pay via PhonePe
                 </a>
-            </div>
+            </div> -->
 
 
             <div class="bank-details">
                 <h2>Bank Details</h2>
-                <p><strong>Bank Name:</strong> ABC Bank</p>
-                <p><strong>Account Holder Name:</strong> Madrasa XYZ</p>
-                <p><strong>Account Number:</strong> 123456789</p>
-                <p><strong>IFSC Code:</strong> ABCD0123456</p>
-                <p><strong>Branch Name:</strong> XYZ Branch</p>
+                <p><strong>Bank Name:</strong> PUNJAB NATIONAL BANK</p>
+                <p><strong>Account Holder Name:</strong> MD SHAHBAZ</p>
+                <p><strong>Account Number:</strong> 2103000100728835</p>
+                <p><strong>IFSC Code:</strong> PUNB0210300</p>
+                <!-- <p><strong>Branch Name:</strong> XYZ Branch</p> -->
             </div>
         </section>
 
         <section class="instructions">
             <h2>Payment Instructions</h2>
-            <p>After making the payment, please confirm your payment by sending a screenshot or details to <a href="tel://6204606943">+916204606943</a></p>
+            <p>After making the payment, please confirm your payment by sending a screenshot or details to <a style="text-decoration: none;" href="tel://6204606943">+916204606943</a></p>
         </section>
     </div>
 
