--- a/donation.html
+++ b/donation.html
@@ -31,7 +31,7 @@
             <br>
             <br>
 
-            <!-- <div class="google-payment">
+         <div class="google-payment">
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="google-button">
                     Pay via Google pe
                 </a>
@@ -41,7 +41,7 @@
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="phonepe-button">
                     Pay via PhonePe
                 </a>
-            </div> -->
+        </div>
 
 
             <div class="bank-details">
