--- a/index.html
+++ b/index.html
@@ -23,26 +23,30 @@
         <h1>Madrasa Darul Uloom Faizain-E-Tajushsharia <q>Sikariyan</q></h1> 
     </header>
 
+
+    <marquee behavior="scroll" style="font-size: 20px;" >
+        السلام علیکم ورحمۃ اللہ وبرکاتہ
+    </marquee>
+
+    <marquee behavior="scroll" style="font-size: 20px;" >
+        مدارس دارالعلوم فیضانِ تاجوششریہ سیکریاں
+    </marquee>
+
     <main>
 <!-- new event add karna ho to ye update kare -->
         <div class="marquee-container">
             <div class="marquee">
-                <span class="new-label">NEW</span> <!-- "New" Label -->
-                <span class="marquee-text">No event.......!</span>
+                <span class="new-label">NEW</span> 
+                <span class="marquee-text">16 September___Milad un-nabi Program</span>
             </div>
-        
-            <!-- <div class="marquee">
-                <span class="new-label">NEW</span>
-                <span class="marquee-text">Ye line bhi chalte rehti hai, naye updates ke saath... Line 2</span>
-            </div>  -->
         </div>
 
-        <!-- new event add karna ho to ye update kare code khatam  -->
+<!-- new event add karna ho to ye update kare code khatam  -->
         
 
         <section id="Introduction" class="Introduction">
 
-        <h2>Introduction</h2>
+        <h2 style="margin: 18px;">Introduction</h2>
 
         <p><b>Madrasa Darul Uloom Faizain-E-Tajushsharia</b>- Ilmi Aur Deeni Taleem Ka Markaz</p>
 
@@ -172,7 +176,7 @@
 
         <section id="Donation" class="donation">
 
-        <h2><a style="color: black;" href="donation.html" target="_blank" >Donation</a></h2>
+        <h2><a style="color: black;" href="donation.html" target="_blank">Donation</a></h2>
 
         <ul class="uldonation">
 
