--- a/donation.html
+++ b/donation.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div id="button"><button><a href="index.html" target="_blank" >Home page</a></button></div>
+        <div id="button"><button><a style="color: black; text-decoration: none;" href="index.html" target="_blank" >Home page</a></button></div>
      </header>
      <h1>Madrasa Darul Uloom Faizain-E-Tajushsharia <q>Sikariyan</q></h1> 
 
@@ -31,7 +31,7 @@
             <br>
             <br>
 
-         <div class="google-payment">
+            <!-- <div class="google-payment">
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="google-button">
                     Pay via Google pe
                 </a>
@@ -41,7 +41,7 @@
                 <a href="upi://pay?pa=6204606943@axl&pn=Md%20Shahbaz&mc=0000&mode=02&purpose=00" class="phonepe-button">
                     Pay via PhonePe
                 </a>
-        </div>
+            </div> -->
 
 
             <div class="bank-details">
