--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 <img src="image/rasid.jpg" class="slider-image" alt="Media 2">
                 <img src="image/study table.jpg" class="slider-image" alt="Media 3">
                 <img src="image/madrsa outside.jpg" class="slider-image" alt="Media 4">
+                <img src="image/IMG-20240902-WA0048.jpg" class="slider-image" alt="Media 5">
                 
                 <button class="slider-button prev" onclick="prevImage()">&#9664;</button>
                 <button class="slider-button next" onclick="nextImage()">&#9654;</button>
