--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
             </div>
             
             <div class="media-buttons">
-                <a href="#more-media" class="media-button">More Media</a>
-                <a href="#events" class="media-button">View Events</a>
+<!--                 <a href="#more-media" class="media-button">More Media</a>
+                <a href="#events" class="media-button">View Events</a> -->
+                <a href="View Events.html" class="media-button">View Events</a>
             </div>
             
             <script>
