--- a/View Events.html
+++ b/View Events.html
@@ -16,7 +16,7 @@
          background-color: #d0d0d0;
          margin: 0;
          padding: 0;
-         background-image: url(/image/background3.webp);
+         background-image: url(image/background3.webp);
         }
 
         h1{
@@ -134,26 +134,26 @@ body {
         <div class="media-section">
             <div class="media-container">
                 <div class="media-slider">
-                    <img src="/image/background3 - Copy.jpg" alt="Image 1">
-                    <img src="/image/bord.jpg" alt="Image 2">
-                    <img src="/image/inside front.jpg" alt="Image 3">
-                    <img src="/image/inside intro.jpg" alt="Image 4">
-                    <img src="/image/islamic_wallpaper_16 (1).jpg" alt="Image 5">
-                    <img src="/image/background3 - Copy.jpg" alt="Image 1">
-                    <img src="/image/bord.jpg" alt="Image 2">
-                    <img src="/image/inside front.jpg" alt="Image 3">
-                    <img src="/image/inside intro.jpg" alt="Image 4">
-                    <img src="/image/islamic_wallpaper_16 (1).jpg" alt="Image 5">
+                    <img src="image/background3 - Copy.jpg" alt="Image 1">
+                    <img src="image/bord.jpg" alt="Image 2">
+                    <img src="image/inside front.jpg" alt="Image 3">
+                    <img src="image/inside intro.jpg" alt="Image 4">
+                    <img src="image/islamic_wallpaper_16 (1).jpg" alt="Image 5">
+                    <img src="image/background3 - Copy.jpg" alt="Image 1">
+                    <img src="image/bord.jpg" alt="Image 2">
+                    <img src="image/inside front.jpg" alt="Image 3">
+                    <img src="image/inside intro.jpg" alt="Image 4">
+                    <img src="image/islamic_wallpaper_16 (1).jpg" alt="Image 5">
                 </div>
             </div>
 
             <div class="media-container">
                 <div class="media-slider">
-                    <img src="/image/background3 - Copy.jpg" alt="Image 1">
-                    <img src="/image/bord.jpg" alt="Image 2">
-                    <img src="/image/inside front.jpg" alt="Image 3">
-                    <img src="/image/inside intro.jpg" alt="Image 4">
-                    <img src="/image/islamic_wallpaper_16 (1).jpg" alt="Image 5">
+                    <img src="image/background3 - Copy.jpg" alt="Image 1">
+                    <img src="image/bord.jpg" alt="Image 2">
+                    <img src="image/inside front.jpg" alt="Image 3">
+                    <img src="image/inside intro.jpg" alt="Image 4">
+                    <img src="image/islamic_wallpaper_16 (1).jpg" alt="Image 5">
                 </div>
             </div>
         </div>
