--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </marquee>
 
     <marquee behavior="scroll" style="font-size: 20px;" >
-        مدارس دارالعلوم فیضانِ تاجوششریہ سیکریاں
+         مدرسہ دارالعلوم فیضان تاج الشریعہ سکریان 
     </marquee>
 
     <main>
